2001-11-04  Michael Hope  <michaelh@juju.net.nz>

	* src/SDCCmain.c (parseCmdLine): Added support for -Wp.

	* support/regression/tests/bug-478094.c: Added.

	* src/z80/gen.c (commitPair): Fixed silly gbz80/z80 commit to static bug.

2001-11-04  Bernhard Held  <bernhard@bernhardheld.de>

	* sdcc/sim/ucsim/s51.src/uc390cl.h: Improvement for ds390 to run regression tests

        * sdcc/sim/ucsim/s51.src/uc390.h: Improvement for ds390 to run regression tests

        * sdcc/sim/ucsim/s51.src/regs51.h: Improvement for ds390 to run regression tests

        * sdcc/sim/ucsim/s51.src/glob.cc: Improvement for ds390 to run regression tests

	* sdcc/support/regression/tests/bug-460010.c: Small change for ds390

2001-11-04  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/peeph-gbz80.def: Removed a bad sub optimisation.

2001-11-03  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/bug-477927.c: Added.

	* src/z80/peeph.def: Added minor rules.

	* src/z80/gen.c (genPlusIncr): Added an extra plusinc rule.

	* src/z80/peeph.def: Added jump optimisation modification.

2001-11-01  Michael Hope  <michaelh@juju.net.nz>

	* src/SDCCmain.c (linkEdit): Added runtime path detection to the mcs51 port.

2001-10-30  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/funptrs.c: Added.

2001-10-29  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/ralloc.c (packRegsForHLUse): Fixed up bad spill due to pushing one byte via HL.

2001-10-28  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c (genArrayInit): Made it work for on stack arrays.

	* src/z80/main.c (gbz80_port =): Added rle support to the gbz80 port.

	* src/z80/gen.c (genMinus): Fixed for where the result is one byte.
	(movLeft2ResultLong): Created.

	* src/z80/ralloc.c (packRegsForHLUse): Added a couple of simple cases for the GB.
	(joinPushes): Added.  Joins two char pushes into a word push.

2001-10-27  Michael Hope  <michaelh@juju.net.nz>
